# notepad-app

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: pre-commit.yml
app/: database.py
app/models/: note.py\
database/: indexes.sql  schema.sql  triggers.sql
scripts/: check_branch.sh
tests/: placeholder.py
